<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomebg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" android:layout_weight="1" android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome1"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30sp" android:padding="3dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome2"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30sp" android:padding="3dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome3"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="30sp" android:padding="3dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome4"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtServiceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome5"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
</LinearLayout>
