<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:paddingLeft="5dp" android:paddingTop="12dp" android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:gravity="center" android:layout_marginTop="30dp" android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mainbutton"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="开始考试"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/card_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/mainbutton"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="路线设置"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/card_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/laySystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/mainbutton"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="参数设置"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/card_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layDetect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/mainbutton"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="设备检测"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/card_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtServiceInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/welcome5" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" android:layout_weight="1" android:gravity="right">

            <TextView
                android:id="@+id/txtVersionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="版本号:" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
